;; 参考 : https://tarides.com/blog/2019-05-09-an-introduction-to-ocaml-ppx-ecosystem

(executable
 (name rewriter)
 (modules rewriter)
 (libraries formatter_rewriter ppxlib))

; (rule
;  (targets tmp.ml)
;  (deps
;   (:pp ppx_standalone.exe)
;   (:input test.ml))
;  (action
;   (progn
;    (run ./%{pp} --impl %{input} -o %{targets})
;    ; (system "mv tmp.ml ../../../astprint_rewriter/test.ml")
;    ;(system "gsed -i'' -e '1iopen%fillup Pprintast' test.actual.ml")
;    )))

; (rule
;  (alias runtest)
;  (action
;   (progn
;    (diff test.ml tmp.ml))))

; (executable
;  (name test)
;  (modules test)
;  (libraries ppxlib)
;  (preprocess
;   (staged_pps ppxlib.metaquot ppx_fillup)))

; (test
;  (name test_expected)
;  (modules test_expected)
;  (libraries ppxlib)
;  (preprocess
;   (staged_pps ppxlib.metaquot ppx_fillup)))
