(library
 (name ppx_fillup_ppx_deriving_deriver)
 (public_name ppx_fillup.ppx_deriving_deriver)
 (modules deriver)
 (kind ppx_deriver)
 (libraries ppxlib ppx_deriving.api)
 (preprocess
  (pps ppxlib.metaquot)))

(library
 (name ppx_fillup_ppx_deriving)
 (public_name ppx_fillup.ppx_deriving)
 (modules typeclass))